--- a/index.html
+++ b/index.html
@@ -56,14 +56,19 @@
                 </div>
             </div>
         </section>
+    </header>
+    <main>
         <section class="about-podcast">
             <div class="about-description">
                 <h3 class="text-4xl font-bold text-white pt-20 pb-8">About the Podcast</h3>
-                <p class="text-base font-normal text-white mb-8">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work,
-                and share stories of personal growth from industry leaders.
-                <br>
-                <br>
-                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                <p class="text-base font-normal text-white mb-8">TechWave is your go-to podcast for staying ahead in the
+                    fast-paced world of technology. We break down complex topics into digestible insights, explore
+                    productivity strategies that actually work,
+                    and share stories of personal growth from industry leaders.
+                    <br>
+                    <br>
+                    Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
+                </p>
             </div>
             <div class="ratings">
                 <div class="rating-count">
@@ -84,10 +89,75 @@
                 </div>
             </div>
         </section>
+        <section class="why-choose">
+            <div class="choose-techwave">
+                <div>
+                    <h3 class="text-4xl font-bold text-white pt-10 pb-8 text-center">Why Choose TechWave</h3>
+                </div>
+
+                <div class="card-container">
+                    <div class="audio">
+                    <img src="./images/headphone.png" alt="">
+                    <h4>Premium Audio Quality</h4>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
+                    </p>
+                </div>
+                <div class="interview">
+                    <img src="./images/voice-recorder.png" alt="">
+                    <h4>Exclusive Interviews</h4>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                        secures exclusive conversations you won't find anywhere else, diving deep into their journeys,
+                        failures, and success strategies.</p>
+                </div>
+                <div class="device">
+                    <img src="./images/device.png" alt="">
+                    <h4>Mobile Friendly</h4>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="community">
+                    <img src="./images/location.png" alt="">
+                    <h4>Global Community</h4>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="resources">
+                    <img src="./images/location.png" alt="">
+                    <h4>Rich Resources</h4>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+                </div>
 
 
-    </header>
-    <main>
+            </div>
+        </section>
+        <section class="meet-host">
+            <div class="section-title">
+                <h3 class="text-4xl font-bold text-white pt-10 pb-8 text-center">Meet The Host</h3>
+            </div>
+            <div class="section-descriotion">
+                <div class="host-image">
+                    <img src="./images/host.png" alt="">
+                </div>
+                <div class="host-detail">
+                    <h4 class="text-2xl font-bold text-white pt-10 pb-8 text-left">Alex Kumar</h4>
+                    <p class="text-base font-normal text-white text-left mb-8">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <div class="social-link">
+                        <div class="link-image">
+                            <img src="./images/linkedin.png" alt="">
+                        </div>
+                        <div class="link-image">
+                            <img src="./images/x.png" alt="">
+                        </div>
+                        <div class="link-image">
+                            <img src="./images/instagram.png" alt="">
+                        </div>
+                        <div class="link-image">
+                            <img src="./images/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
