--- a/index.html
+++ b/index.html
@@ -97,37 +97,64 @@
 
                 <div class="card-container">
                     <div class="audio">
-                    <img src="./images/headphone.png" alt="">
-                    <h4>Premium Audio Quality</h4>
-                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio
-                        engineering. Every episode is mastered for optimal listening across all devices and platforms.
-                    </p>
-                </div>
-                <div class="interview">
-                    <img src="./images/voice-recorder.png" alt="">
-                    <h4>Exclusive Interviews</h4>
-                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
-                        secures exclusive conversations you won't find anywhere else, diving deep into their journeys,
-                        failures, and success strategies.</p>
-                </div>
-                <div class="device">
-                    <img src="./images/device.png" alt="">
-                    <h4>Mobile Friendly</h4>
-                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
-                </div>
-                <div class="community">
-                    <img src="./images/location.png" alt="">
-                    <h4>Global Community</h4>
-                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
-                </div>
-                <div class="resources">
-                    <img src="./images/location.png" alt="">
-                    <h4>Rich Resources</h4>
-                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
-                </div>
+                        <img src="./images/headphone.png" alt="">
+                        <h4 class="text-2xl font-bold text-white">Premium Audio Quality</h4>
+                        <p class="text-base text-white">Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                            engineering. Every episode is mastered for optimal listening across all devices and
+                            platforms.
+                        </p>
+                    </div>
+                    <div class="interview">
+                        <img src="./images/voice-recorder.png" alt="">
+                        <h4 class="text-2xl font-bold text-white">Exclusive Interviews</h4>
+                        <p class="text-base text-white">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                            secures exclusive conversations you won't find anywhere else, diving deep into their
+                            journeys,
+                            failures, and success strategies.</p>
+                    </div>
+                    <div class="device">
+                        <img src="./images/device.png" alt="">
+                        <h4 class="text-2xl font-bold text-white">Mobile Friendly</h4>
+                        <p class="text-base text-white">Listen on the go with seamless mobile experience and offline downloads.</p>
+                    </div>
+                    <div class="community">
+                        <img src="./images/location.png" alt="">
+                        <h4 class="text-2xl font-bold text-white">Global Community</h4>
+                        <p class="text-base text-white">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                    </div>
+                    <div class="resources">
+                        <img src="./images/location.png" alt="">
+                        <h4 class="text-2xl font-bold text-white">Rich Resources</h4>
+                        <p class="text-base text-white">Access show notes, transcripts, and additional learning materials for every episode.</p>
+                    </div>
                 </div>
 
 
+            </div>
+        </section>
+        <section class="feature">
+            <div class="feature-title">
+                <h3 class="text-3xl font-bold text-center pb-8 pt-8 text-white">Featured Episodes</h3>
+            </div>
+            <div class="feature-episodes">
+                <div class="feature-video">
+                    <iframe class="rounded-2xl" width="520" height="315" src="https://www.youtube.com/embed/RfeAxw502Hs?si=WW27v8yzgaC3XM3H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h4 class="text-2xl text-white">Edward Said - Framed: The Politics of Stereotypes in News</h4>
+                    <p class="text-base text-white">Palestinian-American literary historian Edward Said showed how the West had the power to represent the colonial ‘other’ - while simultaneously leaving them silent.</p>
+                    <div class="text-base text-green-500">Time</div>
+                </div>
+                <div class="feature-video">
+                    <iframe class="rounded-2xl" width="520" height="315" src="https://www.youtube.com/embed/bAX27XRHMH8?si=62AttdH4aBxj26ls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h4 class="text-2xl text-white">There's no MIRACLE,<br> Richard Feynman advice to students</h4>
+                    <p class="text-base text-white">Richard Feynman talks about why you should work hard to become whatever you want, he further added that there's no such thing as talent, just working hard and extensive studying.</p>
+                    <div class="text-base text-green-500">5.19 min</div>
+                </div>
+                <div class="feature-video">
+                    <iframe class="rounded-2xl" width="520" height="315" src="https://www.youtube.com/embed/dYOqQ9IkBbM?si=1DiXu6pi5AlZQiO7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h4 class="text-2xl text-white">Ferdous Ara - Amar mon chole jay Bangladesher Shudur</h4>
+                    <p class="text-base text-white">A soulful Bangla song by Ferdous Ara, capturing a heart’s longing for the simple beauty of a distant village in Bangladesh. A heartfelt tribute to memory, homeland, and the serene charm of a faraway Bangladeshi village.</p>
+                    <div class="text-base text-green-500">5.55 min</div>
+                </div>
             </div>
         </section>
         <section class="meet-host">
@@ -140,7 +167,10 @@
                 </div>
                 <div class="host-detail">
                     <h4 class="text-2xl font-bold text-white pt-10 pb-8 text-left">Alex Kumar</h4>
-                    <p class="text-base font-normal text-white text-left mb-8">Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                    <p class="text-base font-normal text-white text-left mb-8">Tech entrepreneur, productivity expert,
+                        and lifelong learner. Alex has been in the tech industry for over 10 years, working with
+                        startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders
+                        and practical advice for anyone looking to grow in tech.</p>
                     <div class="social-link">
                         <div class="link-image">
                             <img src="./images/linkedin.png" alt="">
@@ -158,10 +188,36 @@
                 </div>
             </div>
         </section>
-
     </main>
-    <footer>
-
+    <footer id="footer">
+        <section class="footer-container">
+            <div class="text-center">
+                <h3 class="text-4xl font-bold text-white pb-2">Tech<span
+                        class="bg-linear-to-r from-yellow-500 via-fuchsia-600 to-violet-700 text-transparent bg-clip-text inline-block">Wave</span>
+                </h3>
+            </div>
+            <div class="social">
+                <div class="link-image">
+                    <img src="./images/spotify.png" alt="">
+                    <p class="text-base font-thin text-white">Spotify</p>
+                </div>
+                <div class="link-image">
+                    <img src="./images/apple-podcast.png" alt="">
+                    <p class="text-base font-thin text-white">Apple Podcast</p>
+                </div>
+                <div class="link-image">
+                    <img src="./images/youtube.png" alt="">
+                    <p class="text-base font-thin text-white">Youtube</p>
+                </div>
+                <div class="link-image">
+                    <img src="./images/twitter.png" alt="">
+                    <p class="text-base font-normal text-white">Twitter</p>
+                </div>
+            </div>
+            <div>
+                <p class="text-base font-thin text-white text-center">© 2026 TechWave Podcast. All rights reserved.</p>
+            </div>
+        </section>
     </footer>
 </body>
 
