--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section>
             <nav class="navbar">
                 <div>
-                    <h3 class="text-4xl font-bold">Tech<span
+                    <h3 class="text-6xl font-bold">Tech<span
                             class="bg-linear-to-r from-yellow-500 via-fuchsia-600 to-violet-700 text-transparent bg-clip-text inline-block">Wave</span>
                     </h3>
 
@@ -31,28 +31,35 @@
                         class="h-10 pl-10 pr-10 rounded-full text-base font-semibold bg-linear-to-r from-yellow-400 via-fuchsia-500 to-violet-600">Subscribe</button>
                 </div>
             </nav>
+            <hr class="decoration-purple-600">
         </section>
         <section id="banner">
             <div class="banner-container">
                 <div id="banner-hero">
+                    <div class="badge">
+                        <button class="h-10 w-20 rounded-full text-lg text-black" id="btn-badge">NEW</button>
+                    </div>
                     <div class="banner-circle">
                         <img src="./images/hero-circle.png" alt="">
                     </div>
                     <div class="microphone">
                         <img src="./images/microphone.png" alt="">
                     </div>
+
                 </div>
                 <div>
                     <h3 class="text-6xl font-extrabold text-white mb-8">TechWave</h3>
-                    <p class="text-base font-normal text-white mb-8">Your daily dose of tech insights, productivity
-                        hacks, and personal growth</p>
+                    <p class="text-base font-normal text-white mb-8">Your daily dose of tech insights, productivity hacks, and personal growth</p>
                 </div>
-                <div>
+                <div class="flex gap-5">
                     <button
-                        class="h-10 pl-10 pr-10 rounded-full text-base font-semibold bg-linear-to-r from-yellow-400 via-fuchsia-500 to-violet-600">Listen
+                        class="flex gap-2 align-middle pt-2 h-10 pl-10 pr-10 rounded-full text-base font-semibold bg-linear-to-r from-yellow-400 via-fuchsia-500 to-violet-600"><img
+                            class="w-6 h-6 pb-1" src="./images/spotify.png" alt="">Listen
                         to Spotify</button>
                     <button id="btn-banner-sub"
-                        class="h-10 pl-10 pr-10 rounded-full text-base text-green-500 font-semibold">Subscribe</button>
+                        class="flex gap-2 align-middle pt-2 h-10 pl-10 pr-10 rounded-full text-base font-semibold text-green-500"><img
+                            class="w-6 h-6 pt-0.5 pb-0.5" src="./images/message.png" alt="">Subscribe
+                    </button>
                 </div>
             </div>
         </section>
@@ -61,15 +68,13 @@
         <section class="about-podcast">
             <div class="about-description">
                 <h3 class="text-4xl font-bold text-white pt-20 pb-8">About the Podcast</h3>
-                <p class="text-base font-normal text-white mb-8">TechWave is your go-to podcast for staying ahead in the
-                    fast-paced world of technology. We break down complex topics into digestible insights, explore
-                    productivity strategies that actually work,
-                    and share stories of personal growth from industry leaders.
+                <p class="text-base font-normal text-white mb-8">TechWave is your go-to podcast for staying ahead in the fast-paced world of technology. We break down complex topics into digestible insights, explore productivity strategies that actually work, and share stories of personal growth from industry leaders.
                     <br>
                     <br>
                     Join thousands of young professionals and tech enthusiasts who start their day with TechWave.
                 </p>
             </div>
+            <hr class="decoration-purple-600 mb-4">
             <div class="ratings">
                 <div class="rating-count">
                     <h3>150K+</h3>
@@ -77,15 +82,15 @@
                 </div>
                 <div class="rating-count">
                     <h3>200+</h3>
-                    <p>Monthly Listeners</p>
+                    <p>Episodes Published</p>
                 </div>
                 <div class="rating-count">
                     <h3>4.9*</h3>
-                    <p>Monthly Listeners</p>
+                    <p>Average Rating</p>
                 </div>
                 <div class="rating-count">
                     <h3>50+</h3>
-                    <p>Monthly Listeners</p>
+                    <p>Industry Experts</p>
                 </div>
             </div>
         </section>
@@ -99,7 +104,8 @@
                     <div class="audio">
                         <img src="./images/headphone.png" alt="">
                         <h4 class="text-2xl font-bold text-white">Premium Audio Quality</h4>
-                        <p class="text-base text-white">Experience crystal-clear sound with professional-grade recording equipment and expert audio
+                        <p class="text-base text-white">Experience crystal-clear sound with professional-grade recording
+                            equipment and expert audio
                             engineering. Every episode is mastered for optimal listening across all devices and
                             platforms.
                         </p>
@@ -107,7 +113,8 @@
                     <div class="interview">
                         <img src="./images/voice-recorder.png" alt="">
                         <h4 class="text-2xl font-bold text-white">Exclusive Interviews</h4>
-                        <p class="text-base text-white">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host
+                        <p class="text-base text-white">Get unprecedented access to industry titans, startup founders,
+                            and tech visionaries. Our host
                             secures exclusive conversations you won't find anywhere else, diving deep into their
                             journeys,
                             failures, and success strategies.</p>
@@ -115,17 +122,20 @@
                     <div class="device">
                         <img src="./images/device.png" alt="">
                         <h4 class="text-2xl font-bold text-white">Mobile Friendly</h4>
-                        <p class="text-base text-white">Listen on the go with seamless mobile experience and offline downloads.</p>
+                        <p class="text-base text-white">Listen on the go with seamless mobile experience and offline
+                            downloads.</p>
                     </div>
                     <div class="community">
                         <img src="./images/location.png" alt="">
                         <h4 class="text-2xl font-bold text-white">Global Community</h4>
-                        <p class="text-base text-white">Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                        <p class="text-base text-white">Connect with tech enthusiasts from over 120 countries worldwide.
+                        </p>
                     </div>
                     <div class="resources">
                         <img src="./images/location.png" alt="">
                         <h4 class="text-2xl font-bold text-white">Rich Resources</h4>
-                        <p class="text-base text-white">Access show notes, transcripts, and additional learning materials for every episode.</p>
+                        <p class="text-base text-white">Access show notes, transcripts, and additional learning
+                            materials for every episode.</p>
                     </div>
                 </div>
 
@@ -138,22 +148,39 @@
             </div>
             <div class="feature-episodes">
                 <div class="feature-video">
-                    <iframe class="rounded-2xl" width="520" height="315" src="https://www.youtube.com/embed/RfeAxw502Hs?si=WW27v8yzgaC3XM3H" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="rounded-2xl" width="520" height="315"
+                        src="https://www.youtube.com/embed/RfeAxw502Hs?si=WW27v8yzgaC3XM3H" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h4 class="text-2xl text-white">Edward Said - Framed: The Politics of Stereotypes in News</h4>
-                    <p class="text-base text-white">Palestinian-American literary historian Edward Said showed how the West had the power to represent the colonial ‘other’ - while simultaneously leaving them silent.</p>
-                    <div class="text-base text-green-500">Time</div>
+                    <p class="text-base text-white">Palestinian-American literary historian Edward Said showed how the
+                        West had the power to represent the colonial ‘other’ - while simultaneously leaving them silent.
+                    </p>
+                    <div class="text-base text-green-500">10:12 min</div>
                 </div>
                 <div class="feature-video">
-                    <iframe class="rounded-2xl" width="520" height="315" src="https://www.youtube.com/embed/bAX27XRHMH8?si=62AttdH4aBxj26ls" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe class="rounded-2xl" width="520" height="315"
+                        src="https://www.youtube.com/embed/bAX27XRHMH8?si=62AttdH4aBxj26ls" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <h4 class="text-2xl text-white">There's no MIRACLE,<br> Richard Feynman advice to students</h4>
-                    <p class="text-base text-white">Richard Feynman talks about why you should work hard to become whatever you want, he further added that there's no such thing as talent, just working hard and extensive studying.</p>
+                    <p class="text-base text-white">Richard Feynman talks about why you should work hard to become
+                        whatever you want, he further added that there's no such thing as talent, just working hard and
+                        extensive studying.</p>
                     <div class="text-base text-green-500">5.19 min</div>
                 </div>
                 <div class="feature-video">
-                    <iframe class="rounded-2xl" width="520" height="315" src="https://www.youtube.com/embed/dYOqQ9IkBbM?si=1DiXu6pi5AlZQiO7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                    <h4 class="text-2xl text-white">Ferdous Ara - Amar mon chole jay Bangladesher Shudur</h4>
-                    <p class="text-base text-white">A soulful Bangla song by Ferdous Ara, capturing a heart’s longing for the simple beauty of a distant village in Bangladesh. A heartfelt tribute to memory, homeland, and the serene charm of a faraway Bangladeshi village.</p>
-                    <div class="text-base text-green-500">5.55 min</div>
+                    <iframe class="rounded-2xl" width="520" height="315"
+                        src="https://www.youtube.com/embed/LWiM-LuRe6w?si=SKH2dz_rNSpfLBh0" title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <h4 class="text-2xl text-white">AI and the future of humanity | Yuval Noah Harari</h4>
+                    <p class="text-base text-white">In this keynote and Q&A, Yuval Noah Harari summarizes and speculates
+                        on 'AI and the future of humanity'. "In what ways will AI affect how we shape culture?</p>
+                    <div class="text-base text-green-500">41:21 min</div>
                 </div>
             </div>
         </section>
@@ -161,16 +188,13 @@
             <div class="section-title">
                 <h3 class="text-4xl font-bold text-white pt-10 pb-8 text-center">Meet The Host</h3>
             </div>
-            <div class="section-descriotion">
+            <div class="section-meet-host">
                 <div class="host-image">
                     <img src="./images/host.png" alt="">
                 </div>
                 <div class="host-detail">
                     <h4 class="text-2xl font-bold text-white pt-10 pb-8 text-left">Alex Kumar</h4>
-                    <p class="text-base font-normal text-white text-left mb-8">Tech entrepreneur, productivity expert,
-                        and lifelong learner. Alex has been in the tech industry for over 10 years, working with
-                        startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders
-                        and practical advice for anyone looking to grow in tech.</p>
+                    <p class="text-base font-normal text-white text-left mb-8 pr-8">Tech entrepreneur, productivity expert,and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
                     <div class="social-link">
                         <div class="link-image">
                             <img src="./images/linkedin.png" alt="">
@@ -192,7 +216,7 @@
     <footer id="footer">
         <section class="footer-container">
             <div class="text-center">
-                <h3 class="text-4xl font-bold text-white pb-2">Tech<span
+                <h3 id="techwave" class="text-4xl font-bold text-white pb-2">Tech<span
                         class="bg-linear-to-r from-yellow-500 via-fuchsia-600 to-violet-700 text-transparent bg-clip-text inline-block">Wave</span>
                 </h3>
             </div>
@@ -214,7 +238,7 @@
                     <p class="text-base font-normal text-white">Twitter</p>
                 </div>
             </div>
-            <div>
+            <div id="copyright">
                 <p class="text-base font-thin text-white text-center">© 2026 TechWave Podcast. All rights reserved.</p>
             </div>
         </section>
